cluster/apps/default/ingresses/prowlarr/ingress-traefikCRD.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: &name prowlarr
  labels:
    app.kubernetes.io/name: *name
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`prowlarr.${SECRET_DOMAIN_0}`)
      middlewares:
        - name: secure-headers
        - name: authelia
          namespace: default
      services:
        - name: *name
          port: 9696
          namespace: default
  tls:
    secretName: ${SECRET_CERT_NAME_0}-prod-tls
